--- a/progettoP/Tesi.tex
+++ b/progettoP/Tesi.tex
@@ -2164,51 +2164,33 @@ Naturalmente maggiore è il numero di variabili fissate (ossia più elevati sono
 Tuttavia la soluzione prodotta non sarà in generale un ottimo globale poichè con un \textit{p} o un \textit{m} molto elevato risulta poco probabile fissare in soluzione tutte le variabili che appartengono alla soluzione ottima. 
 Qualora il time limit residuo non risulta nullo, è quindi opportuno nelle iterazioni successive diminuire il valore di tali parametri. Tipicamente si preferisce la prima strategia poichè consente dopo un certo numero k di iterazioni, dove k può essere molto elevato, di calcolare la soluzione ottima essendo che si fissano ad ogni iterazioni variabili in maniera random e ,poichè gradualmente p viene diminuito, è facile in una iterazione vengano fissata tutte variabili che appartengono alla soluzione ottima. La seconda strategia da questo punto di vista risulta più scadente visto che, anche se solo un lato fra quelli più corti non appartiene alla soluzione ottima, esso viene comunque fissato impedendo a Cplex di calcolare l' ottimo.
 
-Passiamo ora a discutere il metodo HardFixing realizzato, fornendo una panoramica del suo funzionamento e definendo quali scelte sono state adottate. La soluzione di partenza c_P è stata ottenuto applicando il metodo NearestNeightbor precedentemente discusso. Come accennato, i matheuristici risultano tipicamente applicati a soluzioni  con costi già particolarmente buoni, per tale ragione si è invocato il metodo TwoOpt su c_P il quale produrrà una soluzione x il cui costo risulta,tipicamente, inferiore rispetto a c_P. Fra le politiche possibili per esplorare N(x), si è scelto nuovamente di utilizzare \textbf{first improvement}.//
-La generica iterazione \textit{t} dell' algoritmo si sviluppa come segue: sia \textbf{x_I} la miglior soluzione calcolata da Cplex fino all' itarazine \textit{t}, ogni lato di \textit{x_I} viene fissato in soluzione con probabilità \textit{p} dal metodo \textbf{ModifyModel}. Fissare in soluzione la variabile \textit{x_i} equivale ad aggiungere al modello il vincoli $x_i = 1$ e togliere il vincolo di interezza 0<= x_i <= 1: il nuovo modello così ottenuto viene risolto da Cplex.
-
-Alla prima soluzione ammissibile x* calcolata,il cui costo risulta inferiore rispetto ad \textit{x_I}, il solver viene arrestato e si pone x_I = x*. All' iterazione $t + 1$ vengono nuovamente fissate con probabilità $p$ variabili in soluzione appartenenti a \textit{x*}  iterando il procedimento discusso. Qualora invece in N(x_I) non esista una soluzione migliore di x_I, si modifica l' intorno di esplorazione, ovvero vengono fissate nuovamente in soluzione lati che appartengono x_I ma, poichè il processo di fissaggio è casuale, verranno fissate variabili differenti ottenendo così un intorno differente rispetto al precedente. Quando decidere di far diminuire p è tutt' altro che banale ed esistono svariate possibilità.//
-
-[...]
-
-//
-
-
 \vspace{2\baselineskip} 
 WARM-START
 \vspace{2\baselineskip} 
 
 Qualora si disponga di una soluzione del problema in esame, per esempio ottenuta da un run precedente di un solver o da un algoritmo euristico, è possibile fornirla a Cplex il quale, prima di iniziare il B&C, la processa durante la fase di ottimizzazione. Tale soluzione prende il nome di  \textbf{warm-start} o \textbf{MIP start} e qualora risulti una soluzione ammissibile, viene installata come incumbent. 
-Poter disporre di un incumbent è molto importante poichè consente a Cplex di dichiarare sondati nodi il cui costo della soluzione del rilassamento continuo risulta essere superiore rispetto al costo dell' incumbent(criterio di bounding). Avere un incumbent consente inoltre a Cplex di utilizzare euristici che necessitano di esso, come ad esempio gli euristici \textbf{RINS} e \textbf{polishing} che saranno discussi nel paragrafo X. 
+Poter disporre di un incumbent è molto importante poichè consente a Cplex di dichiarare sondati nodi il cui costo della soluzione del rilassamento continuo risulta essere superiore rispetto al costo dell' incumbent(criterio di bounding). Avere un incumbent consente inoltre a Cplex di utilizzare euristici che necessitano di esso, come ad esempio gli euristici \textbf{RINS} e \textbf{polishing} che saranno discussi nel paragrafo X. Per poter installare un MIPStart è necessario invocare sull' oggetto della classe Cplex in cui si definisce il modello il metodo \textbf{AddMIPStart} la cui firma è:
 
-----Come si fa ad inserire
+\begin{lstlisting}
 
-La soluzione di partenza \textbf{x} è stata fornita a Cplex come MIP start, inoltre qualora l' esplorazione di un intorno non determina una soluzione migliorativa rispetto a quella corrente x_I,  quest' ultima viene passata come warm start anche per  l'iterazione successiva di Cplex: in questo modo l' incumebent contiene sempre la soluzione che si vuole migliorare e, per applicare correttamente la politica first improvement, è sufficiente quindi arrestare il solver non appena l' incumbent viene aggiornato.
+public virtual int AddMIPStart(INumVar[] vars,double[] values)
 
-Si osserva che non è invece necessario fornire a Cplex un warm start nel caso in cui l' incumbent x_I venga aggiornato poichè, nonostante Cplex fissi ad "infinito" il valore dell' incument ogni qual volta inizia a risolvere il subMIP corrente, esso verifica se quest' ultimo risulta essere una soluzione ammissibile per il nuovo subMIP e in tal caso lo installa come incumbent. Per costruzione x_I risulta essere una soluzione ammissibile anche del subMIP corrente poichè questo è ottenuto fissano in soluzione variabili che appartengono proprio a x_I.
+\end{lstlisting}
 
+Dove:
 
-\vspace{2\baselineskip} 
-INFORMATIVE CALLBACK
-\vspace{2\baselineskip} 
+\begin{itemize}
+    \item \textbf{vars}: Vettore contenente nella posizione i la i-esima variabile del modello
+    \item \textbf{values}: Vettore contenente nella posizione i il valore della i-esima variabile del modello
+\end{itemize}
 
-La MIP informative callback viene invocata tutte le volte che un thread si accinge a risolvere un nodo dell' albero decisionale. 
-In maniera del tutto analoga a quanto discusso per la lazy constraint callback, per poterla utilizzare  è necessario creare una classe attribuendoli un nome a piacere, la quale deve estendere la classe astratta \textbf{MIPInfoCallback} contenuta nella libreria di cplex ed infine implementare al suo interno il metodo Main che verrà invocato automaticamente dal sistema ogniqualvolta la callback viene invocata. Nel codice prodotto la classe è stata chiamata \textbf{TSPInformativeCallback}, per installare la callback è necessario eseguire il seguente codice:
-
-
-cplex.Use(new TSPInformativeCallback ())
-
-
-Come accennato nel paragrafo precedente, l' incumbent del B&C risulta pari alla soluzione che si desidera migliorare e quindi, ricordando che si è applicata una politica di esplorazione first improvement, quando l' incumbent viene aggiornato è necessario arrestare Cplex. 
-
-Ciò non poteva essere fatto utilizzando la lazy constraint callback poichè interrompere cplex al suo interno significava non aggiornare l' incumbent. Per tale ragione è stato necessario installare la MIP informative callback: in questo modo non appena un thread prima di procedere nell' esecuzione del rilassamento continuo di un nodo constata che l'incumebent è stato aggiornato, eseguendo il metodo Abort() ereditato dalla classe MIPInfoCallback arresta Cplex. Per verificare se l' incumbent attuale è inferiore a quello precedente, è necessario memorizzarlo in una variabile
-
+La soluzione di partenza \textbf{x} è stata fornita a Cplex come MIP start. Si osserva che non è invece necessario fornire a Cplex un warm start nel caso in cui l' incumbent x_I venga aggiornato poichè, nonostante Cplex fissi ad "infinito" il valore dell' incument ogni qual volta inizia a risolvere il subMIP corrente, esso verifica se quest' ultimo risulta essere una soluzione ammissibile per il nuovo subMIP e in tal caso lo installa come incumbent. Per costruzione x_I risulta essere una soluzione ammissibile anche del subMIP corrente poichè questo è ottenuto fissano in soluzione variabili che appartengono proprio a x_I. Analogamente nel caso non venga aggiornato, in questo caso l'incument con cambia e all' iterazione successiva continua ad essere una soluzione ammissibile del subMIP corrente
 
 \vspace{2\baselineskip}
 PRE-PROCESSING
 \vspace{2\baselineskip} 
 
-Per ridurre il tempo necessario a Cplex per calcolare la prima soluzione migliore di x_I nell' intorno N(x_I), risulta estremamente utile eseguire una seconda fase di fissaggio di variabili chiamata \textbf{pre-processing}. Mentre nella prima fase si fissano in maniera casuale le variabili appartenenti a x_I, in questa seconda fase, a partire dalle variabili fissate, se ne fissano altre a 0 in modo da ridurre la probabilità che la soluzione candidata da Cplex come incumbent abbia al suo interno dei subtour. La fase di pre-processing è quindi specifica per il problema del Commesso Viaggiatore, si consideri la figura X in cui in blu sono stati indicati i lati fissati in soluzione:
+Per ridurre il tempo necessario a Cplex per calcolare la prima soluzione migliore di x_I nell' intorno N(x_I), risulta estremamente utile eseguire una seconda fase di fissaggio di variabili. Mentre nella prima fase si fissano in maniera casuale le variabili appartenenti a x_I, in questa seconda fase, a partire dalle variabili fissate, se ne fissano altre a 0 in modo da ridurre la probabilità che la soluzione candidata da Cplex come incumbent abbia al suo interno dei subtour. La fase di pre-processing è quindi specifica per il problema del Commesso Viaggiatore, si consideri la figura X in cui in blu sono stati indicati i lati fissati in soluzione:
 
 \begin{center}
 \includegraphics[scale=0.5]{PreProcessing}  
@@ -2219,103 +2201,341 @@ Figura X: Output
 
 Le variabili x_{1,3},x_{4,5} e x_{6,9}, per come si sono fissati i lati, dovranno necessariamente assumere il valore 0,altrimenti si avrebbe la presenza di uno o più subtour. 
 
-Il metodo che realizza ciò è stato chiamato PreProcessing ed ha la seguente firma:
+Il metodo che realizza ciò è stato chiamato \textbf{PreProcessingTSP} ed ha la seguente firma:
 
 \begin{lstlisting}
 
- public static void PreProcessing(Instance instance, INumVar[] x, double[] edgeFixed)
+ public static void PreProcessing(Instance instance, INumVar[] x)
 
 \end{lstlisting}
 
 Dove:
 
 \begin{itemize}
-    \item \textbf{instance}: 
-    \item \textbf{x}: 
-    \item \textbf{edgeFixed}: 
+    \item \textbf{instance}: riferimento all' oggetto contenente tutte le informazioni relative all' istanza del Problema del Commesso Viaggiatore corrente;
+    \item \textbf{x}: vettore contente le variabili del modello matematico;
 \end{itemize}
 
-L' algoritmo realizzato ricerca in un primo momento tutte le componenti connesse presenti dopo il fissaggio: per far ciò si è utilizzato un vettore di interi denominato compConn in cui memorizziamo all' indice i la componente connessa del nodo i, e una lista di liste di interi chiamata nodesComp la quale all' indice i contiene una lista contenente tutti i nodi appartenente alla componente connessa i. Riportiamo di seguito il codice realizzato per inizializzare le strutture dati:
- 
-\begin{lstlisting}
+L' algoritmo individua per ogni nodo, in cui incide almeno un lato fissato, la relativa componente connessa e memorizza per ognuno di essi il numero di lati ad esso incidenti. 
 
-//List of integer Lists contentent for each connected component all nodes that belong to it
-List<List<int>> nodesComp = new List<List<int>>();
-           
+\begin{lstlisting} 
+ 
+//Array that stored,for eache node, how many edges incise to it 
+int[] cntNode = new int[instance.NNodes];
+            
 //Vector contenent for each node relative connected component
 int[] compConn = new int[instance.NNodes];
 
-//Inizialization Comp
-for (int i = 0; i < instance.NNodes; i++)
-{
-  nodesComp.Add(new List<int>());
-  nodesComp[i].Add(i);
-}
+//Array of List where are stored,for each connected component the nodes in which incise only a edge
+List<int>[] externalNodes = new List<int>[instance.NNodes];
 
 //Inizialization compConn
 Utility.InitCC(compConn);
 
-\end{lstlisting}
+//Inizialization externalNodes
+for (int i = 0; i < instance.NNodes; i++)
+      externalNodes[i] = new List<int>();
 
-
-Una volta noti tutti i nodi che appartengono ad una generica componente connessa k, è necessario individuare i vertici \textit{i} e \textit{j} appartenenti a k nei quali incidono su di essi solo lato poichè, per costruzione, la variabile associata al lato [i,j] è la variabile cercata da fissare a 0. Individuare il lato [i,j] non risulta banale per cui si è preferito,data una componente connessa k, fissare sistematicamente a 0 tutte le variabili associate a lati i cui nodi indicenti appartengono alla componente connessa k e che non sono stati precedentemente fissati ad 1. In questo modo senz' altro si fissa a 0 la variabile che evita la formazione del subtour, in più si pongono a 0 variabili che durante la fase di pre-processing di Cplex comunque sarebbero state fissate a 0 per i vincoli di grado inseriti. Per cui, considerando la componente connessa formata dai vartici {6,7,8,9} di Fig.X, non solo viene fissata a 0 la variabile x_{6,9} ma anche le variabli x_{6,7} e x_{8,9} .
-
-\begin{center}
-\includegraphics[scale=0.5]{PreProcCompCon}  
-
-Figura X: Output 
-
-\end{center}
-\begin{lstlisting}
-
-//For everyone node tha belong to a connected component 
-for (int i = 0; i < nodesComp.Count; i++)
+for (int i = 0; i < instance.NNodes; i++)
 {
-    if (nodesComp[i] != null && nodesComp[i].Count > 2)
+    for (int j = i + 1; j < instance.NNodes; j++)
     {
-         for (int m = 0; m < nodesComp[i].Count - 1; m++)
-         {
-               for (int y = m + 1; y < nodesComp[i].Count; y++)
-               {
-                   int pos = xPos(nodesComp[i][m], nodesComp[i][y], instance.NNodes);
-                            
-                  //The variabile is not previus fix
-                    if ((x[pos].UB == 1) && (x[pos].LB == 0))
-                         x[pos].UB = 0;                              
-                }
-           }
-     }
-}   
+          //Retriving the correct index position for the current link 
+          int position = Utility.xPos(i, j, instance.NNodes);
+
+           //if the edge is fixed 
+            if (x[position].LB == 1)
+            {
+                 //Upgrade the array cntNode
+                  cntNode[i] += 1;
+                  cntNode[j] += 1;
+
+                   //Set the connected component 
+                   for (int k = 0; k < instance.NNodes; k++)
+                   {
+                        if ((k != j) && (compConn[k] == compConn[j]))
+                           compConn[k] = compConn[i];                          
+                    }
+
+                   //Finally also the value relative to the node i are updated
+                   compConn[j] = compConn[i];                                                                        
+              }
+       }
+}
+\end{lstlisting}
+  
+Per individuare i nodi i,j della variabile x_[i,j] da porre a 0 è sufficiente, per ogni nodo avente un solo lato indicente, inserirlo nella posizione i di un vettore di liste, dove i è compConn[i], cioè la componente connessa di quel nodo.
+  
+\begin{lstlisting}    
+//For each connected component we determine the node which have only a edge incident 
+for(int i = 0; i< instance.NNodes; i++)
+{
+     if (cntNode[i] == 1)
+        externalNodes[compConn[i]].Add(i);
+}
+\end{lstlisting}
+
+Infine si scandiscono tutte le liste appartenenti nel vettore externalNodes, qualora la lista k-esima contenente 2 nodi, questi per costruzione sono i nodi incidenti del lato da porre a 0 della componente connessa k-esima.//
+Si osserva che, qualora la componente connessa sia formata da un solo lato, non dobbiamo ovviamente fissarlo a 0. 
+
+\begin{lstlisting}  
+//Fix to 0 the variable associated to the edge that create a subtour if is fix to 1 by Cplex
+for (int i = 0; i < instance.NNodes; i++)
+{
+	if (externalNodes[i].Count == 2)
+	{
+		//Retriving the correct index position for the current link 
+         int pos = xPos(externalNodes[i][0], externalNodes[i][1], instance.NNodes);
+
+         //If the variabile is not previus fix, set the relative LB to 0
+         if ((x[pos].UB == 1) && (x[pos].LB == 0))
+            x[pos].UB = 0;
+	}
+}
 
 \end{lstlisting}
+
 
 \vspace{2\baselineskip}
 IMPLEMENTAZIONE HARD FIXING
 \vspace{2\baselineskip} 
 
-La tecnica euristica precedentemente esposta è stata implementata all' interno del metodo HardFixing appartenente alla classe TSP. La sua intestazione risulta essere:
+Passiamo ora a discutere il metodo HardFixing realizzato, fornendo una panoramica del suo funzionamento e definendo quali scelte sono state adottate. La sua firma risulta essere:
 
 \begin{lstlisting}
 
-public static PathGenetic NearestNeightbor(Instance instance, Random rnd, List<int>[] listArray)
+static void HardFixing(Cplex cplex, Instance instance, Process process, Random rnd, Stopwatch clock)
 
 \end{lstlisting}
 
-dove:
+Dove:
 
 \begin{itemize}
-    \item \textbf{cplex}: 
-    \item \textbf{instance}: 
+    \item \textbf{cplex}: riferimento oggetto contenente il modello da risolvere;
+    \item \textbf{instance}: riferimento all' oggetto contenente tutte le informazioni relative all' istanza del Problema del Commesso Viaggiatore corrente;
     \item \textbf{process}: 
-    \item \textbf{rdn}: 
+    \item \textbf{rdn}: istanza della classe Random utilizzata per la generazione dei numeri casuali;
     \item \textbf{clock}: 
 \end{itemize}
 
 
+La soluzione di partenza c_P è stata ottenuto applicando il metodo NearestNeightbor precedentemente discusso. Come accennato, i matheuristici risultano tipicamente applicati a soluzioni  con costi già particolarmente buoni, per tale ragione si è invocato il metodo TwoOpt su c_P il quale produrrà una soluzione x il cui costo risulta,tipicamente, inferiore rispetto a c_P. La soluzione così ottenuta è stata memorizzata nel formato utilizzato da Cplex e passata come MIPstart.
+
+Visto che non si sono aggiunti i vincoli di subtour, per garantire che l' eventuale soluzione migliorativa che Cplex  individua nell' intorno corrente, non abbia cicli al suo interno è stato necessario installare la lazy callback.
+
+\begin{lstlisting}
+
+StreamWriter file;
+
+//Vector used to encode the path that rappresent the best integer solution note
+double[] currentIncumbentSol = new double[(instance.NNodes - 1) * instance.NNodes / 2];
+            
+//Cost of the best integer solution note
+double currentIncumbentCost = Double.MaxValue;
+
+List<int>[] listArray = Utility.BuildSLComplete(instance);
+
+//Variable use to don't fix any candidate incumbent solution when lazy callback is invoke
+bool BlockPrint = false;
+
+const int VALUECONSITENOTIMPROV = 3;
+
+//Defined the max number of consecutive run of cplex whithout finds a improvement of the incumbent
+int consecutiveiterationNotImprov = VALUECONSITENOTIMPROV;
+
+//Defined the percentage of edge in the current solution that fixed 
+double percentageFixing = 0.8;
+
+instance.BestSol = new double[(instance.NNodes - 1) * instance.NNodes / 2];
+
+//Create the model
+INumVar[] x = Utility.BuildModel(cplex, instance, -1);
+
+//Create a heuristic solution
+PathStandard heuristicSol = Utility.NearestNeightbor(instance, rnd, listArray);
+            
+//Apply 2-opt algorithm in order to improve the costo o the heiristicSol
+TwoOpt(instance, heuristicSol);
+
+//The heuristic solution is the Incumbent, translate the encode in the format used by Cplex
+for (int i = 0; i < instance.NNodes; i++)
+{
+      int position = Utility.xPos(i, heuristicSol.path[i], instance.NNodes);
+      //Set to one only the edge that belong to heuristic solution
+      currentIncumbentSol[position] = 1;
+}
+
+currentIncumbentCost = heuristicSol.cost;
+
+//Installation of the Lazy Constraint CallBack
+            
+TSPLazyConsCallback tspLazy = new TSPLazyConsCallback(cplex, x, instance, process, BlockPrint);
+cplex.Use(tspLazy);
+           
+//Provide to Cplex a warm start
+cplex.AddMIPStart(x, currentIncumbentSol);
+
+//Set the number of thread equal to the number of logical core present in the processor
+cplex.SetParam(Cplex.Param.Threads, cplex.GetNumCores());
+\end{lstlisting}
+
+
+Fra le politiche possibili per esplorare N(x), si è scelto nuovamente di utilizzare \textbf{first improvement}. Per applicare correttamente tale politica si è fissato il paramento \textbf{IntSolLim} interno a cplex al valore 2.
+
+\begin{lstlisting}
+
+cplex.SetParam(Cplex.LongParam.IntSolLim, 2);
+
+\end{lstlisting}
+
+Esso determina il numero di soluzioni che Cplex deve individuare prima di arrestarsi: è necessario settarlo a 2 poichè gli passiamo un warm-start sempre ammissibile per il modello corrente e ad ogni iterazione cplex riparte dall' incumbent di quella precedente per cui sempre Cplex ha una soluzione ammissibile.
+
+
+La generica iterazione \textit{t} dell' algoritmo si sviluppa come segue: sia \textbf{x_I} la miglior soluzione calcolata da Cplex fino all' itarazine \textit{t}, ogni lato di \textit{x_I} viene fissato in soluzione con probabilità \textit{p} dal metodo \textbf{ModifyModel}. Fissare in soluzione la variabile \textit{x_i} equivale ad aggiungere al modello il vincoli $x_i = 1$ e togliere il vincolo di interezza 0<= x_i <= 1: il nuovo modello così ottenuto viene risolto da Cplex.
+
+Alla prima soluzione ammissibile x* calcolata,il cui costo risulta inferiore rispetto ad \textit{x_I}, il solver viene arrestato e si pone x_I = x*. All' iterazione $t + 1$ vengono nuovamente fissate con probabilità $p$ variabili in soluzione appartenenti a \textit{x*}  iterando il procedimento discusso. Qualora invece in N(x_I) non esista una soluzione migliore di x_I, si modifica l' intorno di esplorazione, ovvero vengono fissate nuovamente in soluzione lati che appartengono x_I ma, poichè il processo di fissaggio è casuale, verranno fissate variabili differenti ottenendo così un intorno differente rispetto al precedente. Quando decidere di far diminuire p è tutt' altro che banale ed esistono svariate possibilità.//
+
+[...]
+
+//
+
+Infine si è ripristinato il valore del lower bound di tutte le variabili per l' iterazione successiva.
+
+\begin{lstlisting}
+
+do
+{
+      //Modify the Model according to the current Incumbent solution
+       Utility.ModifyModel(instance, x, rnd, percentageFixing, currentIncumbentSol);
+              
+       //Solve the model
+       cplex.Solve();
+
+        if (currentIncumbentCost > cplex.GetObjValue(Cplex.IncumbentId))
+        {
+             file = new StreamWriter(instance.InputFile + ".dat", false);
+
+              currentIncumbentCost = cplex.GetObjValue(Cplex.IncumbentId);
+              currentIncumbentSol = cplex.GetValues(x, Cplex.IncumbentId);
+
+              //Print solution               
+              for (int i = 0; i < instance.NNodes; i++)
+              {
+                  for (int j = i + 1; j < instance.NNodes; j++)
+                  {
+                      int position = Utility.xPos(i, j, instance.NNodes);
+
+                       if (currentIncumbentSol[position] >= 0.5)
+                       {
+                              file.WriteLine(instance.Coord[i].X + " " + instance.Coord[i].Y + " " + (i + 1));
+                              file.WriteLine(instance.Coord[j].X + " " + instance.Coord[j].Y + " " + (j + 1) + "\n");
+                       }
+                  }
+              }
+
+              file.Close();
+
+              Utility.PrintGNUPlot(process, instance.InputFile, 1, currentIncumbentCost, -1);
+              
+              //Restorarion the variable consecutiveIterationNotImprov to the value VALUECONSITENOTIMPROV
+              consecutiveiterationNotImprov = VALUECONSITENOTIMPROV;
+        }
+        else
+        {
+              /If don't have improvement decrease variable consecutiveIterationNotImprov
+              consecutiveiterationNotImprov--;
+        }
+                                   
+        if (consecutiveiterationNotImprov == 0)
+        {
+              if (percentageFixing > 0.2)
+              {
+                   percentageFixing -= 0.1;
+                   consecutiveiterationNotImprov = VALUECONSITENOTIMPROV;
+              }
+              else
+                  consecutiveiterationNotImprov = VALUECONSITENOTIMPROV;
+         }
+
+        //Restoration the lower and upper bound of all variable. 
+        for (int i = 0; i < x.Length; i++)
+        {
+             x[i].LB = 0;
+             x[i].UB = 1;
+        }
+
+} while (clock.ElapsedMilliseconds / 1000.0 < instance.TimeLimit);
+
+instance.XBest = currentIncumbentCost;
+instance.BestSol = currentIncumbentSol;
+
+cplex.Output().WriteLine();
+
+
+//Empty line
+cplex.Output().WriteLine();
+
+cplex.Output().WriteLine("x = " + instance.XBest + "\n");
+
+if (Program.VERBOSE >= -1)
+     cplex.ExportModel(instance.InputFile + ".lp");
+
+
+\end{lstlisting}
 
 
 
+\vspace{2\baselineskip}
+METODO MODIFYMODEL (APPENDICE)
+\vspace{2\baselineskip} 
 
+Il metodo ModifyModel fissa in soluzione, con una certa percentuale p, lati che appartengono ad una soluzione ammissibile. La sua firma risulta essere:
+
+\begin{lstlisting} 
+public static void ModifyModel(Instance instance, INumVar[] x, Random rnd, double percentageFixing, double[] solution)
+\end{lstlisting}
+
+Dove:
+
+\begin{itemize}
+    \item \textbf{instance}: riferimento all' oggetto contenente tutte le informazioni relative all' istanza del Problema del Commesso Viaggiatore corrente;
+    \item \textbf{x}: vettore contenente le variabili del modello;
+    \item \textbf{rnd}: istanza della classe Random utilizzata per la generazione dei numeri casuali;
+    \item \textbf{percentageFixing}: Probabilità con cui un lato viene fissato in soluzione;
+    \item \textbf{solution}: Vettore che codifica la soluzione ammissibile su cui si fissano in soluzione i lati.
+\end{itemize}
+
+
+L' idea dell' algoritmo consiste nel scandire tutti i lati appartenenti alla soluzione ammissibile fornitagli in ingresso, invocare per ognuno lato il metodo \textbf{RandomSelect} e se ritorna 1 viene fissato il lato altrimenti no. Per fissarlo si pone semplicemente il LB della variabile ad esso associata a 1.  Il ciclo do - while serve per ripete il fissaggio qualora si fissino tutti i lati o non si vincoli solo un lato poichè non avrebbe senso a questo punto far partire cplex. Al termine del metodo viene effettuato il preprocessing discusso del paragrafo precedente.
+
+\begin{lstlisting}
+
+//Stored the number of variable fixed
+int nVariabileFix = 0;
+
+do
+{
+   nVariabileFix = 0;
+
+   //Scan all edge that belong to the current heuristic solution
+    for (int i = 0; i < x.Length; i++)
+    {
+        if ((solution[i] == 1))
+        {
+            //Whit a percentageFixing probability fix a edge belong to the current solution
+             if (RandomSelect(rnd, percentageFixing) == 1)
+             {
+                   x[i].LB = 1;
+                   nVariabileFix++;
+             }
+         }
+     }
+
+} while (nVariabileFix >= instance.NNodes - 1);
+             
+Utility.PreProcessingTSP(instance, x);
+
+\end{lstlisting}
 
 
 \vspace{2\baselineskip}
